Fixes bug in Known Deposit Sites legend collapse on Safari-like browsers

--- a/static/cma/css/style.css
+++ b/static/cma/css/style.css
@@ -845,7 +845,7 @@ table.modeling_params {
     background-color: transparent;
     color: white;
     margin: 10px auto 20px auto;
-    width: 70%;
+    width: 80%;
 }
 .content.datacube #datacube_layers tbody {
     background-color: #666;
